--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "prettier": "^3.1.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "modern-normalize": "^2.0.0"
   }
 }
